--- a/python/test_Fran.ipynb
+++ b/python/test_Fran.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "id": "f7c27738-c674-4dfc-bc26-4d356aec4fcf",
    "metadata": {},
    "outputs": [
@@ -149,62 +149,62 @@
        "      <td>1.0</td>\n",
        "      <td>6.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Razonablemente buena</td>\n",
-       "      <td>1104.0</td>\n",
-       "      <td>66.0</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>62</td>\n",
-       "      <td>0.118869</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Razonablemente buena</td>\n",
-       "      <td>1104.0</td>\n",
-       "      <td>66.0</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>62</td>\n",
-       "      <td>0.118869</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>Buena</td>\n",
        "      <td>1104.0</td>\n",
        "      <td>66.0</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>62</td>\n",
-       "      <td>0.118869</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>6.0</td>\n",
+       "      <th>6</th>\n",
+       "      <td>63</td>\n",
+       "      <td>0.037566</td>\n",
+       "      <td>3.5</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>Regular</td>\n",
-       "      <td>1104.0</td>\n",
-       "      <td>66.0</td>\n",
+       "      <td>972.0</td>\n",
+       "      <td>48.0</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>62</td>\n",
-       "      <td>0.118869</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>6.0</td>\n",
+       "      <th>12</th>\n",
+       "      <td>76</td>\n",
+       "      <td>0.205871</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Buena</td>\n",
-       "      <td>1104.0</td>\n",
-       "      <td>66.0</td>\n",
+       "      <td>238.0</td>\n",
+       "      <td>10.0</td>\n",
        "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>601</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Razonablemente buena</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>137</td>\n",
+       "      <td>0.187377</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Desfavorable</td>\n",
+       "      <td>474.0</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -227,10 +227,10 @@
        "      <td>1.0</td>\n",
        "      <td>11.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Regular</td>\n",
+       "      <td>Desfavorable</td>\n",
        "      <td>279.0</td>\n",
        "      <td>14.0</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>116</th>\n",
@@ -240,10 +240,10 @@
        "      <td>NaN</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>Regular</td>\n",
+       "      <td>Desfavorable</td>\n",
        "      <td>580.0</td>\n",
        "      <td>27.0</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>117</th>\n",
@@ -253,10 +253,10 @@
        "      <td>1.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Razonablemente buena</td>\n",
+       "      <td>Buena</td>\n",
        "      <td>185.0</td>\n",
        "      <td>14.0</td>\n",
-       "      <td>3</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>118</th>\n",
@@ -266,10 +266,10 @@
        "      <td>1.0</td>\n",
        "      <td>9.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Buena</td>\n",
+       "      <td>Razonablemente buena</td>\n",
        "      <td>214.0</td>\n",
        "      <td>21.0</td>\n",
-       "      <td>4</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>119</th>\n",
@@ -279,23 +279,23 @@
        "      <td>1.0</td>\n",
        "      <td>7.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Buena</td>\n",
+       "      <td>Razonablemente buena</td>\n",
        "      <td>192.0</td>\n",
        "      <td>15.0</td>\n",
-       "      <td>4</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>120 rows × 10 columns</p>\n",
+       "<p>88 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "     object_id_barrio  %_zona_verde  nivel_acustico  num_hospitales  \\\n",
        "0                  62      0.118869             3.0             1.0   \n",
-       "1                  62      0.118869             3.0             1.0   \n",
-       "2                  62      0.118869             3.0             1.0   \n",
-       "3                  62      0.118869             3.0             1.0   \n",
-       "4                  62      0.118869             3.0             1.0   \n",
+       "6                  63      0.037566             3.5             NaN   \n",
+       "12                 76      0.205871             3.5             NaN   \n",
+       "13                601           NaN             3.5             NaN   \n",
+       "19                137      0.187377             3.5             NaN   \n",
        "..                ...           ...             ...             ...   \n",
        "115                28      0.087284             4.0             1.0   \n",
        "116                37      0.134529             4.0             NaN   \n",
@@ -304,35 +304,35 @@
        "119                57      0.216731             3.0             1.0   \n",
        "\n",
        "     num_colegios  num_chargestations     calidad_ambiental  num_contenedores  \\\n",
-       "0             6.0                 NaN  Razonablemente buena            1104.0   \n",
-       "1             6.0                 NaN  Razonablemente buena            1104.0   \n",
-       "2             6.0                 NaN                 Buena            1104.0   \n",
-       "3             6.0                 NaN               Regular            1104.0   \n",
-       "4             6.0                 NaN                 Buena            1104.0   \n",
+       "0             6.0                 NaN                 Buena            1104.0   \n",
+       "6             1.0                 2.0               Regular             972.0   \n",
+       "12            5.0                 NaN                 Buena             238.0   \n",
+       "13            NaN                 NaN  Razonablemente buena               NaN   \n",
+       "19           10.0                 NaN          Desfavorable             474.0   \n",
        "..            ...                 ...                   ...               ...   \n",
-       "115          11.0                 NaN               Regular             279.0   \n",
-       "116           2.0                 2.0               Regular             580.0   \n",
-       "117           2.0                 NaN  Razonablemente buena             185.0   \n",
-       "118           9.0                 NaN                 Buena             214.0   \n",
-       "119           7.0                 NaN                 Buena             192.0   \n",
+       "115          11.0                 NaN          Desfavorable             279.0   \n",
+       "116           2.0                 2.0          Desfavorable             580.0   \n",
+       "117           2.0                 NaN                 Buena             185.0   \n",
+       "118           9.0                 NaN  Razonablemente buena             214.0   \n",
+       "119           7.0                 NaN  Razonablemente buena             192.0   \n",
        "\n",
        "     num_transporte  punt_ambiental  \n",
-       "0              66.0               3  \n",
-       "1              66.0               3  \n",
-       "2              66.0               4  \n",
-       "3              66.0               2  \n",
-       "4              66.0               4  \n",
+       "0              66.0               4  \n",
+       "6              48.0               2  \n",
+       "12             10.0               4  \n",
+       "13              NaN               3  \n",
+       "19             42.0               1  \n",
        "..              ...             ...  \n",
-       "115            14.0               2  \n",
-       "116            27.0               2  \n",
-       "117            14.0               3  \n",
-       "118            21.0               4  \n",
-       "119            15.0               4  \n",
+       "115            14.0               1  \n",
+       "116            27.0               1  \n",
+       "117            14.0               4  \n",
+       "118            21.0               3  \n",
+       "119            15.0               3  \n",
        "\n",
-       "[120 rows x 10 columns]"
+       "[88 rows x 10 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,12 +379,16 @@
     "    elif i == 'Buena':\n",
     "        punt_ambiental.append(score[3])\n",
     "\n",
-    "barrios_gpd['punt_ambiental'] = punt_ambiental"
+    "barrios_gpd['punt_ambiental'] = punt_ambiental\n",
+    "\n",
+    "barrios_gpd = barrios_gpd.drop_duplicates(['object_id_barrio'])\n",
+    "barrios_gpd\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "id": "d262340f-4a79-4a82-8dd5-97e6c631a48d",
    "metadata": {},
    "outputs": [
@@ -415,34 +419,9 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>12</td>\n",
-       "      <td>4.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>109</th>\n",
-       "      <td>47</td>\n",
-       "      <td>4.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>24</td>\n",
-       "      <td>4.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>111</th>\n",
-       "      <td>55</td>\n",
-       "      <td>4.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>32</td>\n",
-       "      <td>4.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>40</th>\n",
+       "      <td>617</td>\n",
+       "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>38</th>\n",
@@ -450,12 +429,7 @@
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>617</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
+       "      <th>37</th>\n",
        "      <td>617</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
@@ -469,6 +443,36 @@
        "      <td>617</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>49</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <td>121</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>218</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>109</th>\n",
+       "      <td>47</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>12</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "<p>120 rows × 2 columns</p>\n",
@@ -476,31 +480,38 @@
       ],
       "text/plain": [
        "     object_id_barrio  nivel_acustico\n",
-       "99                 12             4.5\n",
-       "109                47             4.5\n",
-       "43                 24             4.0\n",
-       "111                55             4.0\n",
-       "49                 32             4.0\n",
-       "..                ...             ...\n",
-       "38                617             2.0\n",
-       "39                617             2.0\n",
        "40                617             2.0\n",
+       "38                617             2.0\n",
+       "37                617             2.0\n",
        "41                617             2.0\n",
        "42                617             2.0\n",
+       "..                ...             ...\n",
+       "53                 49             4.0\n",
+       "92                121             4.0\n",
+       "35                218             4.0\n",
+       "109                47             4.5\n",
+       "99                 12             4.5\n",
        "\n",
        "[120 rows x 2 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#SETTING DATAFRAMES \n",
+    "#SETTING DATAFRAMES PER \n",
     "verdes_df = barrios_gpd[['object_id_barrio', '%_zona_verde']].sort_values(['%_zona_verde'], axis = 0, ascending = False)\n",
-    "acustico_df = barrios_gpd[['object_id_barrio', 'nivel_acustico']].sort_values(['nivel_acustico'], axis = 0, ascending = False)\n",
-    "acustico_df"
+    "acustico_df = barrios_gpd[['object_id_barrio', 'nivel_acustico']].sort_values(['nivel_acustico'], axis = 0)\n",
+    "hospitales_df = barrios_gpd[['object_id_barrio', 'num_hospitales']].sort_values(['num_hospitales'], axis = 0, ascending = False)\n",
+    "colegios_df = barrios_gpd[['object_id_barrio', 'num_colegios']].sort_values(['num_colegios'], axis = 0, ascending = False)\n",
+    "chargestation_df = barrios_gpd[['object_id_barrio', 'num_chargestations']].sort_values(['num_chargestations'], axis = 0, ascending = False)\n",
+    "contaminacion_df = barrios_gpd[['object_id_barrio', 'punt_ambiental']].sort_values(['punt_ambiental'], axis = 0, ascending = False)\n",
+    "contenedores_df = barrios_gpd[['object_id_barrio', 'num_contenedores']].sort_values(['num_contenedores'], axis = 0, ascending = False)\n",
+    "transporte_df = barrios_gpd[['object_id_barrio', 'num_transporte']].sort_values(['num_transporte'], axis = 0, ascending = False)\n",
+    "acustico_df\n",
+    "\n"
    ]
   },
   {
@@ -567,30 +578,7 @@
      ]
     }
    ],
-   "source": [
-    "score = [1,2,3,4]\n",
-    "punt_ambiental = []\n",
-    "\n",
-    "for i in barrios_gpd['calidad_ambiental']:\n",
-    "    \n",
-    "    if i == 'Desfavorable':\n",
-    "        punt_ambiental.append(score[0])\n",
-    "\n",
-    "    elif i == 'Regular':\n",
-    "        punt_ambiental.append(score[1])\n",
-    "\n",
-    "    elif i == 'Razonablemente buena':\n",
-    "        punt_ambiental.append(score[2])\n",
-    "\n",
-    "    elif i == 'Buena':\n",
-    "        punt_ambiental.append(score[3])\n",
-    "\n",
-    "print(*punt_ambiental)\n",
-    "\n",
-    "barrios_gpd['punt_ambiental'] = punt_ambiental\n",
-    "\n",
-    "print(barrios_gpd[['calidad_ambiental', 'punt_ambiental']])"
-   ]
+   "source": []
   }
  ],
  "metadata": {
