Adding recomendacion to python and SQL

--- a/python/test_Fran.ipynb
+++ b/python/test_Fran.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "id": "4f72efcb-e7cb-4bf8-8d99-fe8aef6930c7",
    "metadata": {},
    "outputs": [],
@@ -13,12 +13,13 @@
     "import numpy\n",
     "import psycopg2\n",
     "import random\n",
-    "import pandas as pd"
+    "\n",
+    "import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "id": "35e89977-9be5-4095-9cc9-d2cb10a9a994",
    "metadata": {},
    "outputs": [
@@ -39,7 +40,34 @@
       "159         160        %_zona_verde          2\n",
       "479         160      nivel_acustico          6\n",
       "\n",
-      "[480 rows x 3 columns]\n"
+      "[480 rows x 3 columns]\n",
+      "     id_cliente  %_zona_verde  nivel_acustico  num_hospitales  num_colegios  \\\n",
+      "0             1             7             8.0               9             8   \n",
+      "1             2            10             6.0               9             1   \n",
+      "2             3             7             8.0               9             8   \n",
+      "3             4             7             5.0               5             1   \n",
+      "4             5             7             1.0              10             9   \n",
+      "..          ...           ...             ...             ...           ...   \n",
+      "155         156            10             6.0              10            10   \n",
+      "156         157             5             2.0               5             5   \n",
+      "157         158            10             8.0               8            10   \n",
+      "158         159             3            10.0               7             1   \n",
+      "159         160             9             8.0               4             2   \n",
+      "\n",
+      "     num_chargestations  pm25  num_contenedores  num_transporte  \n",
+      "0                   6.0     7                 8               9  \n",
+      "1                   7.0     6                10               8  \n",
+      "2                   6.0     7                 8               9  \n",
+      "3                   3.0     5                 5               9  \n",
+      "4                  10.0     7                10              10  \n",
+      "..                  ...   ...               ...             ...  \n",
+      "155                10.0    10                10              10  \n",
+      "156                 9.0     7                 8              10  \n",
+      "157                 5.0     8                 8               8  \n",
+      "158                 1.0    10                10               7  \n",
+      "159                 9.0     8                 8               4  \n",
+      "\n",
+      "[160 rows x 9 columns]\n"
      ]
     }
    ],
@@ -88,7 +116,7 @@
     "cliente_df = pd.DataFrame()\n",
     "cliente_df['id_cliente'] = df['id_cliente']\n",
     "\n",
-    "for idx, i in enumerate(list_caract):\n",
+    "for i in list_caract:\n",
     "    cliente_df[i] = df[i]\n",
     "\n",
     "\n",
@@ -116,12 +144,13 @@
     "preferencia_df['id_caract'] = left_merged['id_caract']\n",
     "\n",
     "print(preferencia_df)\n",
-    "    "
+    "\n",
+    "print(cliente_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "id": "f7c27738-c674-4dfc-bc26-4d356aec4fcf",
    "metadata": {},
    "outputs": [
@@ -157,7 +186,6 @@
        "      <th>nombre_barrio</th>\n",
        "      <th>last_edited_user</th>\n",
        "      <th>...</th>\n",
-       "      <th>num_colegios</th>\n",
        "      <th>id_caract_num_colegios</th>\n",
        "      <th>num_chargestations</th>\n",
        "      <th>id_caract_num_chargestations</th>\n",
@@ -167,6 +195,7 @@
        "      <th>id_caract_num_contenedores</th>\n",
        "      <th>num_transporte</th>\n",
        "      <th>id_caract_num_transporte</th>\n",
+       "      <th>date_time</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -183,7 +212,6 @@
        "      <td>NATZARET</td>\n",
        "      <td>None</td>\n",
        "      <td>...</td>\n",
-       "      <td>6.0</td>\n",
        "      <td>2</td>\n",
        "      <td>NaN</td>\n",
        "      <td>8</td>\n",
@@ -193,6 +221,7 @@
        "      <td>7</td>\n",
        "      <td>11.0</td>\n",
        "      <td>1</td>\n",
+       "      <td>2022/11/25 11:37:56</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -207,7 +236,6 @@
        "      <td>LA CREU COBERTA</td>\n",
        "      <td>None</td>\n",
        "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>2</td>\n",
        "      <td>2.0</td>\n",
        "      <td>8</td>\n",
@@ -217,6 +245,7 @@
        "      <td>7</td>\n",
        "      <td>8.0</td>\n",
        "      <td>1</td>\n",
+       "      <td>2022/11/25 11:37:56</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -231,7 +260,6 @@
        "      <td>CIUTAT JARDI</td>\n",
        "      <td>None</td>\n",
        "      <td>...</td>\n",
-       "      <td>5.0</td>\n",
        "      <td>2</td>\n",
        "      <td>NaN</td>\n",
        "      <td>8</td>\n",
@@ -241,6 +269,7 @@
        "      <td>7</td>\n",
        "      <td>10.0</td>\n",
        "      <td>1</td>\n",
+       "      <td>2022/11/25 11:37:56</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -255,7 +284,6 @@
        "      <td>RAFALELL-VISTABELLA</td>\n",
        "      <td>None</td>\n",
        "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>2</td>\n",
        "      <td>NaN</td>\n",
        "      <td>8</td>\n",
@@ -265,6 +293,7 @@
        "      <td>7</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
+       "      <td>2022/11/25 11:37:56</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -279,7 +308,6 @@
        "      <td>LA CARRASCA</td>\n",
        "      <td>None</td>\n",
        "      <td>...</td>\n",
-       "      <td>10.0</td>\n",
        "      <td>2</td>\n",
        "      <td>NaN</td>\n",
        "      <td>8</td>\n",
@@ -289,6 +317,7 @@
        "      <td>7</td>\n",
        "      <td>21.0</td>\n",
        "      <td>1</td>\n",
+       "      <td>2022/11/25 11:37:56</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -327,7 +356,6 @@
        "      <td>LA PETXINA</td>\n",
        "      <td>None</td>\n",
        "      <td>...</td>\n",
-       "      <td>11.0</td>\n",
        "      <td>2</td>\n",
        "      <td>NaN</td>\n",
        "      <td>8</td>\n",
@@ -337,6 +365,7 @@
        "      <td>7</td>\n",
        "      <td>14.0</td>\n",
        "      <td>1</td>\n",
+       "      <td>2022/11/25 11:37:56</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>84</th>\n",
@@ -351,7 +380,6 @@
        "      <td>SANT FRANCESC</td>\n",
        "      <td>None</td>\n",
        "      <td>...</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>2</td>\n",
        "      <td>2.0</td>\n",
        "      <td>8</td>\n",
@@ -361,6 +389,7 @@
        "      <td>7</td>\n",
        "      <td>27.0</td>\n",
        "      <td>1</td>\n",
+       "      <td>2022/11/25 11:37:56</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>85</th>\n",
@@ -375,7 +404,6 @@
        "      <td>PINEDO</td>\n",
        "      <td>None</td>\n",
        "      <td>...</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>2</td>\n",
        "      <td>NaN</td>\n",
        "      <td>8</td>\n",
@@ -385,6 +413,7 @@
        "      <td>7</td>\n",
        "      <td>14.0</td>\n",
        "      <td>1</td>\n",
+       "      <td>2022/11/25 11:37:56</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>86</th>\n",
@@ -399,7 +428,6 @@
        "      <td>ELS ORRIOLS</td>\n",
        "      <td>None</td>\n",
        "      <td>...</td>\n",
-       "      <td>9.0</td>\n",
        "      <td>2</td>\n",
        "      <td>NaN</td>\n",
        "      <td>8</td>\n",
@@ -409,6 +437,7 @@
        "      <td>7</td>\n",
        "      <td>21.0</td>\n",
        "      <td>1</td>\n",
+       "      <td>2022/11/25 11:37:56</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>87</th>\n",
@@ -423,7 +452,6 @@
        "      <td>NA ROVELLA</td>\n",
        "      <td>None</td>\n",
        "      <td>...</td>\n",
-       "      <td>7.0</td>\n",
        "      <td>2</td>\n",
        "      <td>NaN</td>\n",
        "      <td>8</td>\n",
@@ -433,10 +461,11 @@
        "      <td>7</td>\n",
        "      <td>15.0</td>\n",
        "      <td>1</td>\n",
+       "      <td>2022/11/25 11:37:56</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>88 rows × 27 columns</p>\n",
+       "<p>88 rows × 28 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -479,62 +508,62 @@
        "86   [39.494312122911424, -0.3699310988383476]          ELS ORRIOLS   \n",
        "87    [39.45287103221434, -0.3659376655648462]           NA ROVELLA   \n",
        "\n",
-       "   last_edited_user  ... num_colegios  id_caract_num_colegios  \\\n",
-       "0              None  ...          6.0                       2   \n",
-       "1              None  ...          1.0                       2   \n",
-       "2              None  ...          5.0                       2   \n",
-       "3              None  ...          NaN                       2   \n",
-       "4              None  ...         10.0                       2   \n",
-       "..              ...  ...          ...                     ...   \n",
-       "83             None  ...         11.0                       2   \n",
-       "84             None  ...          2.0                       2   \n",
-       "85             None  ...          2.0                       2   \n",
-       "86             None  ...          9.0                       2   \n",
-       "87             None  ...          7.0                       2   \n",
+       "   last_edited_user  ... id_caract_num_colegios  num_chargestations  \\\n",
+       "0              None  ...                      2                 NaN   \n",
+       "1              None  ...                      2                 2.0   \n",
+       "2              None  ...                      2                 NaN   \n",
+       "3              None  ...                      2                 NaN   \n",
+       "4              None  ...                      2                 NaN   \n",
+       "..              ...  ...                    ...                 ...   \n",
+       "83             None  ...                      2                 NaN   \n",
+       "84             None  ...                      2                 2.0   \n",
+       "85             None  ...                      2                 NaN   \n",
+       "86             None  ...                      2                 NaN   \n",
+       "87             None  ...                      2                 NaN   \n",
        "\n",
-       "    num_chargestations  id_caract_num_chargestations  pm25  id_caract_pm25  \\\n",
-       "0                  NaN                             8  10.0               5   \n",
-       "1                  2.0                             8  21.0               5   \n",
-       "2                  NaN                             8  12.0               5   \n",
-       "3                  NaN                             8  12.0               5   \n",
-       "4                  NaN                             8  12.0               5   \n",
-       "..                 ...                           ...   ...             ...   \n",
-       "83                 NaN                             8  12.0               5   \n",
-       "84                 2.0                             8  12.0               5   \n",
-       "85                 NaN                             8  10.0               5   \n",
-       "86                 NaN                             8   NaN               5   \n",
-       "87                 NaN                             8  21.0               5   \n",
+       "    id_caract_num_chargestations  pm25  id_caract_pm25  num_contenedores  \\\n",
+       "0                              8  10.0               5             184.0   \n",
+       "1                              8  21.0               5             162.0   \n",
+       "2                              8  12.0               5             238.0   \n",
+       "3                              8  12.0               5               NaN   \n",
+       "4                              8  12.0               5             237.0   \n",
+       "..                           ...   ...             ...               ...   \n",
+       "83                             8  12.0               5             279.0   \n",
+       "84                             8  12.0               5             580.0   \n",
+       "85                             8  10.0               5             185.0   \n",
+       "86                             8   NaN               5             214.0   \n",
+       "87                             8  21.0               5             192.0   \n",
        "\n",
-       "    num_contenedores  id_caract_num_contenedores  num_transporte  \\\n",
-       "0              184.0                           7            11.0   \n",
-       "1              162.0                           7             8.0   \n",
-       "2              238.0                           7            10.0   \n",
-       "3                NaN                           7             NaN   \n",
-       "4              237.0                           7            21.0   \n",
-       "..               ...                         ...             ...   \n",
-       "83             279.0                           7            14.0   \n",
-       "84             580.0                           7            27.0   \n",
-       "85             185.0                           7            14.0   \n",
-       "86             214.0                           7            21.0   \n",
-       "87             192.0                           7            15.0   \n",
+       "    id_caract_num_contenedores  num_transporte  id_caract_num_transporte  \\\n",
+       "0                            7            11.0                         1   \n",
+       "1                            7             8.0                         1   \n",
+       "2                            7            10.0                         1   \n",
+       "3                            7             NaN                         1   \n",
+       "4                            7            21.0                         1   \n",
+       "..                         ...             ...                       ...   \n",
+       "83                           7            14.0                         1   \n",
+       "84                           7            27.0                         1   \n",
+       "85                           7            14.0                         1   \n",
+       "86                           7            21.0                         1   \n",
+       "87                           7            15.0                         1   \n",
        "\n",
-       "    id_caract_num_transporte  \n",
-       "0                          1  \n",
-       "1                          1  \n",
-       "2                          1  \n",
-       "3                          1  \n",
-       "4                          1  \n",
-       "..                       ...  \n",
-       "83                         1  \n",
-       "84                         1  \n",
-       "85                         1  \n",
-       "86                         1  \n",
-       "87                         1  \n",
+       "              date_time  \n",
+       "0   2022/11/25 11:37:56  \n",
+       "1   2022/11/25 11:37:56  \n",
+       "2   2022/11/25 11:37:56  \n",
+       "3   2022/11/25 11:37:56  \n",
+       "4   2022/11/25 11:37:56  \n",
+       "..                  ...  \n",
+       "83  2022/11/25 11:37:56  \n",
+       "84  2022/11/25 11:37:56  \n",
+       "85  2022/11/25 11:37:56  \n",
+       "86  2022/11/25 11:37:56  \n",
+       "87  2022/11/25 11:37:56  \n",
        "\n",
-       "[88 rows x 27 columns]"
+       "[88 rows x 28 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,6 +586,7 @@
     "barrios_gpd = gpd.GeoDataFrame.from_features(barrios_json)\n",
     "barrios_gpd.crs = 'epsg:4326' #Aseguramos que la proyección es la adecuada para coordenadas GPS\n",
     "\n",
+    "barrios_gpd['date_time'] = datetime.datetime.now().strftime(\"%Y/%m/%d %H:%M:%S\")\n",
     "\n",
     "barrios_gpd\n",
     "\n"
@@ -564,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "id": "d262340f-4a79-4a82-8dd5-97e6c631a48d",
    "metadata": {},
    "outputs": [
@@ -608,7 +638,7 @@
     "barrios_top = pd.DataFrame(columns=['object_id_barrio', 'id_caract', 'val_carac'])\n",
     "\n",
     "for i in range(len(list_caract)):\n",
-    "    data = barrios_gpd[['object_id_barrio', 'id_caract_'+list_caract[i], list_caract[i]]].sort_values([list_caract[i]], axis = 0, ascending = False).head(3).values.tolist()\n",
+    "    data = barrios_gpd[['object_id_barrio', 'nombre_barrio','id_caract_'+list_caract[i], list_caract[i]]].sort_values([list_caract[i]], axis = 0, ascending = False).head(3).values.tolist()\n",
     "    barrios_top = pd.concat([barrios_top,pd.DataFrame(data, columns=barrios_top.columns)],ignore_index=True)\n",
     "\n",
     "\n",
@@ -617,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "id": "7e1a1537-4e62-4aba-a53a-957f48e564e5",
    "metadata": {},
    "outputs": [
@@ -655,32 +685,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "id": "30746d61",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 2 3 3 4 3 1 2 1 3 3 2 1 1 3 3 3 1 2 1 3 1 2 3 3 2 3 2 2 1 3 4 3 3 4 2 1 1 4 1 3 3 1 2 1 2 3 2 2 4 4 1 1 2 2 3 4 2 3 3 4 3 1 3 2 1 3 1 1 3 2 3 3 1 1 1 3 4 2 3 2 2 3 2 2 4 1 4 3 2 4 4 3 3 3 3 3 1 4 2 1 3 4 3 2 3 1 4 3 1 1 3 4 4 4 4 3 3 2 2\n",
-      "        calidad_ambiental  punt_ambiental\n",
-      "0            Desfavorable               1\n",
-      "1                 Regular               2\n",
-      "2    Razonablemente buena               3\n",
-      "3    Razonablemente buena               3\n",
-      "4                   Buena               4\n",
-      "..                    ...             ...\n",
-      "115                 Buena               4\n",
-      "116  Razonablemente buena               3\n",
-      "117  Razonablemente buena               3\n",
-      "118               Regular               2\n",
-      "119               Regular               2\n",
-      "\n",
-      "[120 rows x 2 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# barrios_gpd = barrios_gpd[['object_id_barrio', '%_zona_verde', 'nivel_acustico', 'num_hospitales', 'num_colegios', 'num_chargestations', 'pm25', 'num_contenedores', 'num_transporte']]\n",
     "\n",
