path jupyter updated

--- a/jupyter/data_cleaning.ipynb
+++ b/jupyter/data_cleaning.ipynb
@@ -31,7 +31,7 @@
     "#SETTING UP barrios_caracteristicas as GDF\n",
     "\n",
     "# SETTING UP BARRIOS DF\n",
-    "path = '../datos/datos_out/barrios_caracteristicas_final.geojson'\n",
+    "path = 'datos/datos_out/barrios_caracteristicas_final.geojson'\n",
     "\n",
     "\n",
     "#CARGAMOS LOS DATOS DE LOS BARRIOS\n",
