--- a/jupyter/data_cleaning.ipynb
+++ b/jupyter/data_cleaning.ipynb
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = '../datos/datos_out/barrios_caracteristicas_final.geojson'\n",
+    "path = 'datos/datos_out/barrios_caracteristicas_final.geojson'\n",
     "\n",
     "\n",
     "with open(path) as json_file:\n",
